--- a/assets/css/jquery.raty.css
+++ b/assets/css/jquery.raty.css
@@ -6,11 +6,11 @@
   font-family: "raty";
   font-style: normal;
   font-weight: normal;
-  src: url("../js/vender/fonts/raty.eot");
-  src: url("../js/vender/fonts/raty.eot?#iefix") format("embedded-opentype");
-  src: url("../js/vender/fonts/raty.svg#raty") format("svg");
-  src: url("../js/vender/fonts/raty.ttf") format("truetype");
-  src: url("../js/vender/fonts/raty.woff") format("woff");
+  src: url("../fonts/raty.eot");
+  src: url("../fonts/raty.eot?#iefix") format("embedded-opentype");
+  src: url("../fonts/raty.svg#raty") format("svg");
+  src: url("../fonts/raty.ttf") format("truetype");
+  src: url("../fonts/raty.woff") format("woff");
 }
 
 .cancel-on-png, .cancel-off-png, .star-on-png, .star-off-png, .star-half-png {
