--- a/assets/css/section_one.css
+++ b/assets/css/section_one.css
@@ -16,6 +16,13 @@ body {
     background: black;
 }
 
+.place-hold {
+    display: block;
+    visibility: hidden;
+    width: 100%;
+    height: 102px;
+}
+
 /* out-wrapper外层容器 */
 #out-wrapper {
     height: 100%;
@@ -55,26 +62,23 @@ body {
 }
 
 /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
     width: 16px;
     height: 16px;
     background-color: #F5F5F5;
 }
 
 /*定义滚动条轨道 内阴影+圆角*/
-::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     background-color: #F5F5F5;
 }
 
 /*定义滑块 内阴影+圆角*/
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
     background-color: #555;
 }
 
