--- a/assets/css/load_animate.css
+++ b/assets/css/load_animate.css
@@ -83,7 +83,7 @@
 .ip-header .ip-loader svg path.ip-loader-circle {
     -webkit-transition: stroke-dashoffset 0.2s;
     transition: stroke-dashoffset 0.2s;
-    stroke: #ef6e7e;
+    stroke: #CF4646;
 }
 
 [class^="icon-"]::before,
