--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -18,7 +18,7 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
     font-weight: normal;
     vertical-align: baseline;
     background: transparent;
-    font-family: '微软雅黑', monospace, sans-serif;
+    font-family: '微软雅黑';
 }
 
 main, article, aside, figure, footer, header, nav, section, details, summary {display: block;}
