--- a/assets/css/section_four.css
+++ b/assets/css/section_four.css
@@ -9,11 +9,8 @@
 
 #section_four #word-cloud {
     display: block;
-    width: 650px;
-    height: 450px;
-    background-color: rgba(254, 248, 239, 1) !important;
+    width: 992px;
+    height: 500px;
+    background-color: transparent !important;
     margin: 0 auto !important;
-    border-radius: 50%;
-    border: 2px solid #eee;
-    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.3);
 }
