--- a/assets/css/section_one.css
+++ b/assets/css/section_one.css
@@ -101,13 +101,12 @@ body {
     right: 0;
     border-top: 1px solid #353a3f;
     z-index: 1;
-    opacity: .75;
 }
 
 .top-nav .container {
     height: 100%;
-    background-image: -webkit-linear-gradient(top, rgba(19, 22, 26, 0.98) 0%, rgba(19, 22, 26, 0.92) 100%);
-    background-image: linear-gradient(to bottom, rgba(19, 22, 26, 0.98) 0%, rgba(19, 22, 26, 0.92) 100%);
+    background:linear-gradient(to left,rgba(35,17,16, 0.98) 0%, rgba(40, 40, 40, 1) 30%,rgba(40, 40, 40, 1) 60%,rgba(35,17,16, 0.98) 100%);
+    background:-webkit-linear-gradient(to left,rgba(35,17,16, 0.98) 0%, rgba(40, 40, 40, 1) 30%,rgba(40, 40, 40, 1) 60%,rgba(35,17,16, 0.98) 100%);
 }
 
 .top-nav .inner-container {
@@ -207,14 +206,15 @@ body {
 }
 
 #section_one .section-container .section-title {
-    font-family: 'Nunito-Bold';
-    font-size: 20px;
     text-transform: capitalize;
     color: #fff;
     padding: 0.5em 0 0 0;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 2em;
+    line-height: 35px;
+    font-weight: 700;
 }
 
 .space-line {
@@ -229,7 +229,20 @@ body {
 #section_one .section-container p {
     width: 600px;
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
     margin: 3px auto;
     line-height: 1.5;
+}
+
+#section_one .section-container .profile_position {
+   color: #4ca5d0;
+}
+
+#section_one .section-container strong {
+    display: block;
+    width: 600px;
+    text-align: center;
+    margin: 10px auto 0 auto;
+    line-height: 1.5;
+    color: #4ca5d0;
 }
